mobile overflow issue resolved

--- a/wetmap/src/App.css
+++ b/wetmap/src/App.css
@@ -6,6 +6,7 @@
   text-align: center;
   width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .App-logo {
